Release 1.2.2
  * Passengers on aircraft are not considered to be on board if that aircraft is in
  a sector that can refuel it.
  * When switching the "Units" Tab, it is now automatically refreshed.  I hope this is an improvement, but I'm not sure yet.
  

Release 1.2.1
  * Added option for players to chose "no alliances" when joining a game
  * Added forgotten password page to reset password
  * Added account management page where players can change their password and e-mail settings
  * Added last-login field to player, record browser version when player registers (to
  get a better sense of the balance of windows / mac / linux players out there)

Release 1.2.0
  * Added Team ranking.  Teams are ranked using the ELO Rating system.  http://en.wikipedia.org/wiki/Elo_rating_system
  * Changed Leader Board to rank players using a weighted average of their team rankings.  (Weighted by wins.)
  * Replaced GWT 2.0.4 and Velocity 1.7 with Wicket 1.5.4.
  * Upgraded Spring 2.5.6 to Spring 3.1
  * Upgraded Hibernate 3.2.6 to Hibernate 4.0
  * Upgraded postgres jdbc3 version 8.2 to jdbc4 version 9
  * Upgraded swt 3.4.2 to swt 3.5.4
  * Switched logging to commons-logging

Release 1.1.52
  * Fixed a bug that prevented game data from flushing to disc every 15 minutes.  This resulted
    in a corrupt database if the server was shut down ungracefully (e.g. due to a power failure)

Release 1.1.51
  * Fixed a bug that caused a lot of game data to get corrupted when the server goes down (e.g. when there is a power
    outage).  Now only the last 15 minutes of data will be lost.

Release 1.1.50
  * Fixed a bug that stranded passengers when the unit carrying them is intercepted / interdicted.
  * Fixed a bug that prevented move orders from being set on units out of supply.
  * Fixed a bug that crashed the client if the player closed the News window before news fully loaded.
  * Improved error logging if there is a crash at startup.